addding necessary configs

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,4 +2,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url =
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
